--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ html {
 body {
     font-family: 'Ubuntu Mono', monospace;
     line-height: 1.6;
-    color: #783937FF;
+    color: #85586F;
     margin: 0 auto;
     padding: 0;
     max-width: 900px;
-    background: rgb(247, 151, 142);
+    background-image: url("/assets/background.jpg");
+    background-size: cover;
 }
 
 h1 {
@@ -52,24 +53,18 @@ p {
     width: 20em;
     padding: 1em;
     border-radius: 2px;
-    border: unset;
-    background-color: #F1AC88FF;
+    border: 1px solid #85586F;
+    background-color: #F8EDE3;
     font-family: 'Ubuntu Mono', monospace;
 }
   
-.entry-text-title:focus {
-    outline-color: #783937FF;
-    color: #783937FF;
-    font-size: 1.2rem;
-}
-  
 .entry-text-title::placeholder {
-    color: #783937FF;
+    color: #85586F;
     font-size: 1rem;
 }
   
 .entry-text-title::-ms-value {
-    color: #783937FF;
+    color: #85586F;
     font-size: 1rem;
 }
 
@@ -79,9 +74,10 @@ p {
     margin: 1em auto;
     padding: 1em;
     border-radius: 2px;
-    border: unset;
-    background-color: #F1AC88FF;
+    border: 1px solid #85586F;
+    background-color: #F8EDE3;
     font-family: 'Ubuntu Mono', monospace;
+    color: #85586F;
   }
 
 .diary-container {
@@ -89,11 +85,12 @@ p {
     flex-direction: column;
     width: 500px;
     gap: 1rem;
-    background: #FC766AFF;
-    border: 5px dotted #783937FF;
+    background: #DFD3C3;
+    border: 5px dotted #85586F;
     border-radius: 15px;
     padding: 20px;
     margin: auto;
+    box-shadow: #D0B8A8 0px 7px 29px 0px; 
 }
 
 .entries-container {
@@ -107,9 +104,10 @@ p {
 .singel-day-container {
     margin-top: 0;
     padding: 20px;
-    border: 5px dotted #F1AC88FF;
-    background: #FC766AFF;
+    border: 5px dotted  #85586F;
+    background:  #DFD3C3;
     border-radius: 15px;
+    box-shadow: #D0B8A8 0px 7px 29px 0px; 
 }
 
 .headingDiv {
@@ -120,15 +118,13 @@ p {
     width: 450px;
 }
 
-
-
 button {
-    background-color: #783937FF;
+    background-color: #85586F;
     font-family: 'Ubuntu Mono', monospace;
     height: 50px;
     width: 175px;
     color: white;
-    border: 1px solid #783937FF;
+    border: 1px solid #85586F;
     border-radius: 20px;
     border-top-left-radius: 0;
 }
