--- a/style.css
+++ b/style.css
@@ -147,3 +147,27 @@ button {
     cursor: pointer;
     font-weight: bold;
 }
+
+@media screen and (max-width: 500px) {
+    .diary-container {
+        max-width: 100%;
+        align-items: center;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .title-label, .date-label, .text-label {
+        font-size: 1rem;
+    }
+
+    .entry-text-box {
+        width: 80%;
+        margin: auto;
+    }
+
+    .entries-container{
+        max-width: 100%;
+    }
+  }
